--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --watch dev -e js dev/api.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/jorgegomesen/blockchain-in-node.js#readme",
   "dependencies": {
-    "sha256": "^0.2.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "sha256": "^0.2.0",
+    "uuid": "^8.3.2"
   }
 }
